Add to cart functionality added

--- a/AspMVCECommerce/Content/Site.css
+++ b/AspMVCECommerce/Content/Site.css
@@ -712,3 +712,10 @@ input:focus-visible {
     background-color: #a7a7a7 !important;
 }
 
+
+
+
+/* CHANGE MODAL ADD BUTTON OPACITY ON HOVER */
+.modal-product-add-btn:hover {
+    opacity: 1 !important;
+}
